<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_secondary">

        <TextView
            android:id="@+id/instructions_text_1"
            style="@style/text_headline_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_text_1"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/instructions_text_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions_text_2"
            style="@style/text_paragraph_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/instructions_text_2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/listings_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_1" />

        <Button
            android:id="@+id/listings_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listings_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>